# Pico_C

./: ControlBox - Monitor - 1104 - SPI.txt  pico_flash_region_protect.ld
.jxbrowser.userdata/: Local State  Module Info Cache
.jxbrowser.userdata/Default/: Favicons  History  Network Action Predictor  Preferences  Secure Preferences  Top Sites  Visited Links  Web Data
.jxbrowser.userdata/GrShaderCache/: data_0  data_1  f_000001  f_000002  f_000003  f_000004  f_000005  f_000006  f_000007  f_000008  f_000009  f_00000a  f_00000b  f_00000c  f_00000d  f_00000e  f_00000f  f_000010  index
.jxbrowser.userdata/Local Storage - EXT/: http_127.0.0.1.localstorage  https_dev.ti.com.localstorage
.jxbrowser.userdata/ShaderCache/: data_1  index
CBM-1104/: .ccsproject  .cproject  .project
CBM-1104/.launches/: CBM-1104.launch
CBM-1104/Debug/: ccsObjs.opt  makefile  objects.mk  subdir_rules.mk  (+1 more)
ControlBox/: .ccsproject  .cproject  .project  adc.c  adc.h  buttons.c  buttons.h  common.h  comport.c  comport.h  controlbox.c  controlbox.h  encoders.c  encoders.h  main.c  pintrace.c  pintrace.h
ControlBox-Monitor/: .cproject  .project  ComPort.c  ComPort.h  acq0001.csv  common.h  controlbox.dwf3work  main.c
ControlBox-Monitor-1104/: .ccsproject  .cproject  .project  ControlBox-Monitor-1104.c  usbspi-dev.syscfg  usbspi-sot-8.syscfg
gpio_toggle_output_LP_MSPM0C1104_nortos_ticlang/: .ccsproject  .cproject  gpio_toggle_output.c  gpio_toggle_output.syscfg
gpio_toggle_output_LP_MSPM0C1104_nortos_ticlang_xxx/: .ccsproject  .cproject  .project  usbspi-dev.syscfg  usbspi.c
scrap/: bs2_default.elf.map
spi_peripheral_multibyte_fifo_poll_LP_MSPM0C1104_nortos_ticlang_xxx/: .ccsproject  .cproject  .project  spi_peripheral_multibyte_fifo_poll.c  spi_peripheral_multibyte_fifo_poll.syscfg
starlight/: Blob.c  Blob.h  CMakeLists.txt  Common.h  Debug.h  FlashBlob.c  FlashBlob.h  Led.c  Led.h  Matcher.c  Matcher.h  Morph.c  Morph.h  Parser.c  Parser.h  Queue.c  Queue.h  Scene.c  Scene.h  Shifter.c  Stack.c  Stack.h  StarLight_BLOB.txt  bcmd.c  bcmd.h  beng.c  beng.h  blob_dump.c  bluetooth.c  bluetooth_stdio.c  bluetooth_stdio.h  btstack_config.h  btstdio.c  btstdio.h  bvar.c  bvar.h  bvar_internal.c  bvar_internal.h  picopins.c  picopins.h  (+12 more)
starlight - CheckPoint/: Blob.c  FlashBlob.c  FlashBlob.h  Led.c  Matcher.c  Parser.c  Shifter.c  blob.h  blob_dump.c  btstdio.c  btstdio.h  led.h  matcher.h  obled.c  parser.h  scene.c  ws2812.c  ws2812.h  ws2812.pio
starlight - CheckPoint 2/: .gitignore  CMakeLists.txt  FlashBlob.c  FlashBlob.h  StarLight.smproj  StarLight_BLOB.txt  bcmd.c  beng.c  beng.h  blob.c  blob.h  blob_dump.c  btstdio.c  bvar.c  bvar.h  bvar_internal.c  common.h  debug.h  led.c  led.h  matcher.c  matcher.h  morph.h  obled.h  parser.c  parser.h  scene.c  scene.h  shifter.c  shifter.h  spi.h  spi_map.c  spi_map.h  stack.h  starlight.c  ws2812.c  ws2812.h
(+246 files in other folders)
